--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,8 +27,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=C:\\Users\\Admin\\Downloads\\lib_funnycode\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=libs\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=C:\\Users\\Admin\\Downloads\\lib_funnycode\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jaxb-api-2.1.jar=C:\\Users\\Admin\\Downloads\\lib_funnycode\\lib\\jaxb-api-2.1.jar
 file.reference.mssql-jdbc-13.2.0.jre11.jar=libs\\mssql-jdbc-13.2.0.jre11.jar
+file.reference.sqljdbc42.jar=C:\\Users\\Admin\\Downloads\\lib_funnycode\\lib\\sqljdbc42.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -40,7 +44,11 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-13.2.0.jre11.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1}:\
+    ${file.reference.jaxb-api-2.1.jar}:\
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
